--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,7 +28,7 @@
         <li class="">
           <a
             class="social__link"
-            href=""
+            href="https://www.facebook.com/goITclub/?locale=ru_RU"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -45,7 +45,7 @@
         <li class="">
           <a
             class="social__link"
-            href=""
+            href="https://www.instagram.com/goitclub/"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -63,7 +63,7 @@
         <li class="">
           <a
             class="social__link"
-            href=""
+            href="https://www.youtube.com/channel/UCN7NQEBOUuIoXrJZzqVb58Q"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -92,7 +92,7 @@
 <div class="toggle-switch">
   <p>Light</p>
   <span>
-    <label class="switch">
+    <label class="switch" aria-label="theme switch">
       <input class="theme-switch" type="checkbox" />
       <span class="slider round"></span>
     </label>
