--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -41,10 +41,10 @@
       </ul>
     </nav>
     <ul class="modal__social__list">
-      <li class="">
+      <li>
         <a
           class="modal__social__link"
-          href=""
+          href="https://www.facebook.com/goITclub/?locale=ru_RU"
           target="_blank"
           rel="noopener noreferrer"
         >
@@ -58,10 +58,10 @@
           </svg>
         </a>
       </li>
-      <li class="">
+      <li>
         <a
           class="modal__social__link"
-          href=""
+          href="https://www.instagram.com/goitclub/"
           target="_blank"
           rel="noopener noreferrer"
         >
@@ -76,10 +76,10 @@
         </a>
       </li>
 
-      <li class="">
+      <li>
         <a
           class="modal__social__link"
-          href=""
+          href="https://www.youtube.com/channel/UCN7NQEBOUuIoXrJZzqVb58Q"
           target="_blank"
           rel="noopener noreferrer"
         >
