--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -67,11 +67,13 @@
                 /assets/img/reviews/victoria@1x.png 1x,
                 /assets/img/reviews/victoria@2x.png 2x
               "
-              src="/assets/img/reviews/victoria@1x"
+              src="/assets/img/reviews/victoria@1x.png"
               alt="girls avatar"
-              width="50"
+              width="100"
+              height="75"
               class="review-avatar_image"
             />
+
             <div class="reviews__avatar__text--container">
               <h3 class="reviews__avatar__name">Victoria</h3>
               <p class="reviews__avatar__description">Student</p>
