--- a/src/partials/scroll-up.html
+++ b/src/partials/scroll-up.html
@@ -1,4 +1,4 @@
-<a class="scroll-up is-hidden" href="#header">
+<a class="scroll-up is-hidden" href="#header" aria-label="scroll up">
   <svg height="16px" width="16px" viewBox="0 0 487 487" xml:space="preserve">
     <g>
       <path
