--- a/src/partials/leave.html
+++ b/src/partials/leave.html
@@ -133,7 +133,7 @@
             </div>
           </div>
         </fieldset>
-        <button class="leave__btn" type="button">Send</button>
+        <button class="leave__btn" type="submit">Send</button>
         <p class="leave__btn-descr">
           By clicking on “Send” button, you agree to our Privacy Policy, and
           allow Promodo to use this information for marketing purposes.
