Add requirede to form fields

--- a/src/partials/leave.html
+++ b/src/partials/leave.html
@@ -24,9 +24,9 @@
         </p>
       </div>
       <form class="leave__form" method="post">
-        <input class="leave__input" type="text" placeholder="Name" />
-        <input class="leave__input" type="email" placeholder="Email" />
-        <input class="leave__input" type="tel" placeholder="Phone" />
+        <input class="leave__input" type="text" placeholder="Name" required />
+        <input class="leave__input" type="email" placeholder="Email" required />
+        <input class="leave__input" type="tel" placeholder="Phone" required />
         <textarea
           class="leave__textarea"
           name="comment"
