--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,5 @@
+/* Fonts */
+@import url('/assets/fonts/fonts.css');
 /* Base */
 @import url('base/reset.css');
 @import url('base/normalize.css');
