--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -4,7 +4,7 @@
       Our <span class="section__title--span">lessons</span>
     </h2>
     <p class="section__subtitle section__subtitle--center">
-      Our lessonss are carefully structured and interactive, designed to promote
+      Our lessons are carefully structured and interactive, designed to promote
       rapid language acquisition through practical tasks and real-world
       scenarios
     </p>
