--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -36,11 +36,11 @@
             type="image/webp"
           />
           <source
-            srcset="../assets/img/about-us/memoji@2x.png 2x"
+            srcset="/assets/img/about-us/memoji@2x.png 2x"
             type="image/png"
           />
           <img
-            src="../assets/img/about-us/memoji.png"
+            src="/assets/img/about-us/memoji.png"
             alt="memoji girl"
             width="254"
             height="173"
