--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -30,8 +30,8 @@
         <picture>
           <source
             srcset="
-            ../assets/img/about-us/memoji.webp 1x,
-            ../assets/img/about-us/memoji@2x.webp 2x
+            /assets/img/about-us/memoji.webp 1x,
+            /assets/img/about-us/memoji@2x.webp 2x
           "
             type="image/webp"
           />
