--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,38 +1,44 @@
-<section id='about-us' class='section about-us__section'>
-  <div class='container'>
-    <h2 class='section__title'>About <span class='section__title--span'>Us</span></h2>
+<section id="about-us" class="section about-us__section">
+  <div class="container">
+    <h2 class="section__title">
+      About <span class="section__title--span">Us</span>
+    </h2>
 
-    <p class='section__subtitle section__subtitle--center'>
+    <p class="section__subtitle section__subtitle--center">
       We are dedicated to providing engaging and effective English language
       courses in a supportive and stimulating learning environment
     </p>
 
-    <div class='about-us__wrapper'>
-      <ul class='about-us_list'>
-        <li class='about-us_list__item'>
-          <p class='about-us_list__text'>Expert, innovative teaching staff</p>
+    <div class="about-us__wrapper">
+      <ul class="about-us_list">
+        <li class="about-us_list__item">
+          <p class="about-us_list__text">Expert, innovative teaching staff</p>
         </li>
 
-        <li class='about-us_list__item'>
-          <p class='about-us_list__text'>Wide range of course levels and options</p>
+        <li class="about-us_list__item">
+          <p class="about-us_list__text">
+            Wide range of course levels and options
+          </p>
         </li>
 
-        <li class='about-us_list__item'>
-          <p class='about-us_list__text'>Multicultural learning environment</p>
+        <li class="about-us_list__item">
+          <p class="about-us_list__text">Multicultural learning environment</p>
         </li>
 
-        <li class='about-us_list__item'>
-          <p class='about-us_list__text'>Comprehensive language support services</p>
+        <li class="about-us_list__item">
+          <p class="about-us_list__text">
+            Comprehensive language support services
+          </p>
         </li>
       </ul>
 
-      <div class='about-us__img-wrap'>
+      <div class="about-us__img-wrap">
         <picture>
           <source
             srcset="
-            ../assets/img/about-us/memoji.webp 1x,
-            ../assets/img/about-us/memoji@2x.webp 2x
-          "
+              /assets/img/about-us/memoji.webp    1x,
+              /assets/img/about-us/memoji@2x.webp 2x
+            "
             type="image/webp"
           />
           <source
