--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -9,9 +9,9 @@
       their experiences, progress, and the transformative impact
     </p>
 
-    <div class="reviews__wrapper">
-      <ul class="reviews__list">
-        <li class="reviews__item">
+    <div class="reviews__wrapper swiper">
+      <ul class="reviews__list swiper-wrapper">
+        <li class="reviews__item swiper-slide">
           <div class="reviews__avatar">
             <img
               srcset="
@@ -36,7 +36,7 @@
           </p>
         </li>
 
-        <li class="reviews__item">
+        <li class="reviews__item swiper-slide">
           <div class="reviews__avatar">
             <img
               srcset="
@@ -60,7 +60,7 @@
           </p>
         </li>
 
-        <li class="reviews__item">
+        <li class="reviews__item swiper-slide">
           <div class="reviews__avatar">
             <img
               srcset="
