--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="footer__container container">
     <!-- The first column containing the logo and contact info  -->
     <div class="footer__contacts">
-      <a class="logo logo--light link" href="index.html">
+      <a class="logo logo--light" href="index.html">
         <div class="logotype__wrapper">
           english<span class="logo--accent">excellence</span>.
         </div>
