--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -9,8 +9,8 @@
       their experiences, progress, and the transformative impact
     </p>
 
-    <div class="reviews__wrapper swiper">
-      <ul class="reviews__list swiper-wrapper">
+    <div class="swiper">
+      <ul class="swiper-wrapper">
         <li class="reviews__item swiper-slide">
           <div class="reviews__avatar">
             <img
