change image ext, fix path in html file

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -15,8 +15,8 @@
           <div class="reviews__avatar">
             <img
               srcset="
-                /assets/img/reviews/anna@1x.png 1x,
-                /assets/img/reviews/anna@2x.png 2x
+                /assets/img/reviews/anna@1x.webp 1x,
+                /assets/img/reviews/anna@2x.webp 2x
               "
               src="/assets/img/reviews/anna@1x"
               alt="girls avatar"
@@ -40,8 +40,8 @@
           <div class="reviews__avatar">
             <img
               srcset="
-                /assets/img/reviews/mykhailo@1x.png 1x,
-                /assets/img/reviews/mykhailo@2x.png 2x
+                /assets/img/reviews/mykhailo@1x.webp 1x,
+                /assets/img/reviews/mykhailo@2x.webp 2x
               "
               src="/assets/img/reviews/mykhailo@1x"
               alt="mans avatar"
@@ -64,8 +64,8 @@
           <div class="reviews__avatar">
             <img
               srcset="
-                /assets/img/reviews/victoria@1x.png 1x,
-                /assets/img/reviews/victoria@2x.png 2x
+                /assets/img/reviews/victoria@1x.webp 1x,
+                /assets/img/reviews/victoria@2x.webp 2x
               "
               src="/assets/img/reviews/victoria@1x"
               alt="girls avatar"
