fixed modal animation

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,6 +1,6 @@
 <div class="backdrop is-hidden" data-modal>
   <div data-modal-content class="modal">
-    <div data-modal-close class="button-close" type="button">
+    <div data-modal-close class="button-close">
       <svg class="close__icon" width="32" height="32">
         <use href="/assets/img/modal/closeBTN.svg#closeNav"></use>
       </svg>
