--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -123,9 +123,7 @@
         </p>
         <div class="link-container">
           <a class="terms-link small-text" href="#">Terms of Service</a>
-          <a class="privacy-link small-text" href="/privacy-policy"
-            >Privacy Policy</a
-          >
+          <a class="privacy-link small-text" href="#">Privacy Policy</a>
           <a class="our-team-link small-text" href="team.html">Our Team</a>
         </div>
       </div>
