--- a/src/css/components/reviews.css
+++ b/src/css/components/reviews.css
@@ -1,3 +1,20 @@
+@media screen and (max-width: 767.98px) {
+  .reviews__section {
+    padding-bottom: 65px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .reviews__section {
+    padding-bottom: 75px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .reviews__section {
+    padding-bottom: 100px;
+  }
+}
+
 .reviews__item {
   display: flex!important;
   flex-direction: column;
@@ -56,4 +73,16 @@
     font-size: 14px;
     width: calc(100% - 34px);
   }
+}
+
+.swiper{
+  overflow-y: visible !important;
+}
+.swiper-pagination{
+      bottom: -10% !important;
+}
+.swiper-pagination-bullet-active{
+  background-color: var(--accent-color) !important;
+  width: 12px;
+    height: 12px;
 }
