--- a/src/css/components/reviews.css
+++ b/src/css/components/reviews.css
@@ -1,17 +1,17 @@
 @media screen and (max-width: 767.98px) {
   .reviews__section {
-    padding-bottom: 65px;
+    padding-bottom: 65px !important;
   }
 }
 @media screen and (min-width: 768px) {
   .reviews__section {
-    padding-bottom: 75px;
+    padding-bottom: 75px !important;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .reviews__section {
-    padding-bottom: 100px;
+    padding-bottom: 100px !important;
   }
 }
 
