--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -10,15 +10,13 @@
     </p>
 
     <div class="about-us__wrapper">
-      <ul class="about-us_list">
+      <ol class="about-us_list">
         <li class="about-us_list__item">
           <p class="about-us_list__text">Expert, innovative teaching staff</p>
         </li>
 
         <li class="about-us_list__item">
-          <p class="about-us_list__text">
-            Wide range of course levels and options
-          </p>
+          <p class="about-us_list__text">Wide range of course levels and options</p>
         </li>
 
         <li class="about-us_list__item">
@@ -26,30 +24,28 @@
         </li>
 
         <li class="about-us_list__item">
-          <p class="about-us_list__text">
-            Comprehensive language support services
-          </p>
+          <p class="about-us_list__text">Comprehensive language support services</p>
         </li>
-      </ul>
+      </ol>
 
       <div class="about-us__img-wrap">
         <picture>
           <source
             srcset="
-              /assets/img/about-us/memoji.webp    1x,
-              /assets/img/about-us/memoji@2x.webp 2x
+              ../assets/img/about-us/memoji.webp    1x,
+              ../assets/img/about-us/memoji@2x.webp 2x
             "
             type="image/webp"
           />
           <source
-            srcset="/assets/img/about-us/memoji@2x.png 2x"
+            srcset="../assets/img/about-us/memoji@2x.png 2x"
             type="image/png"
           />
           <img
-            src="/assets/img/about-us/memoji.png"
+            src="../assets/img/about-us/memoji.png"
             alt="memoji girl"
             width="254"
-            height="173"
+            height="174"
           />
         </picture>
       </div>
