--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -32,17 +32,17 @@
         <picture>
           <source
             srcset="
-              ../assets/img/about-us/memoji.webp    1x,
-              ../assets/img/about-us/memoji@2x.webp 2x
+              /assets/img/about-us/memoji.webp    1x,
+              /assets/img/about-us/memoji@2x.webp 2x
             "
             type="image/webp"
           />
           <source
-            srcset="../assets/img/about-us/memoji@2x.png 2x"
+            srcset="/assets/img/about-us/memoji@2x.png 2x"
             type="image/png"
           />
           <img
-            src="../assets/img/about-us/memoji.png"
+            src="/assets/img/about-us/memoji.png"
             alt="memoji girl"
             width="254"
             height="174"
