--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -81,7 +81,7 @@
     </div>
 
     <!-- start mobile/tablet elements -->
-    <div class="header__btn" data-modal-open type="button">
+    <div class="header__btn" data-modal-open>
       <svg class="open__icon" width="32" height="32">
         <use href="/public/icons.svg#icon-nav-tablet"></use>
       </svg>
